# moonbrain

./: Cargo.toml  flake.nix
godot/: MoonBrain.gdextension  icon.svg.import  milky_way.jpg.import  project.godot
godot/assets/: 2k_mercury.jpg.import  earth.jpg.import  moon.jpg.import  uv.webp.import
godot/compute/: noise.glsl  noise.glsl.import  sample.glsl  sample.glsl.import
godot/scenes/: GravityBody.tscn  World.tscn  enviornment.tscn  procedural_sky.tres  sun_texture.tres
godot/scenes/planet/: TestPlanet.tscn  planet.tres
godot/scenes/player/: Player.tscn
meteor/: Cargo.toml
meteor-cli/: Cargo.toml
meteor-cli/examples/: example.moonbrain  thruster.moonbrain
meteor-cli/src/: main.rs
meteor-lsp/: Cargo.toml
meteor-lsp/examples/: example.moonbrain
meteor-lsp/src/: main.rs
meteor/src/: lexer.rs  lib.rs  operator.rs
meteor/src/parser/: ast.rs  lexer.rs  mod.rs  operator.rs  parser.rs  span.rs  src.rs  symbol.rs
meteor/src/runtime/: array.rs  error.rs  io.rs  memory.rs  mod.rs  value.rs
meteor/src/semantic/: env.rs  mod.rs
meteor/src/vm/: chunk.rs  mod.rs  op.rs  value.rs
moonbrain-rs/: Cargo.toml
moonbrain-rs/src/: lib.rs
moonbrain-rs/src/bodies/: gravity.rs  mod.rs  orchestrator.rs
moonbrain-rs/src/characters/: player.rs
moonbrain-rs/src/chunk/: mod.rs
moonbrain-rs/src/planet/: celestial.rs  generator.rs  mod.rs  sphere.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/bodies/: gravity.rs
rust/src/characters/: player.rs
