[package]
name = "meteor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
lazy_static = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
meteor = { path = "../meteor/" }
clap = { version = "4.4.18", features = ["derive"] }
ariadne = { version = "0.5.0", features = ["auto-color"] }
serde_json = "1.0.134"
