[package]
name = "meteor"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
chumsky = { git = "https://github.com/zesterer/chumsky.git", features = [
	"label",
	"serde",
] }
tokio = { version = "1.42.0", features = ["full"] }
logos = "0.14.4"
ariadne = "0.5.0"
uuid = "1.11.0"
color-eyre = "0.6.3"
indoc = "2.0.5"
dashmap = "6.1.0"
internment = { version = "0.8.6", features = ["serde"] }
displaydoc = { workspace = true }

[lints.clippy]
all = "warn"
pedantic = "warn"
