[package]
name = "moonbrain-gd"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.2.1", features = ["register-docs"] }
lazy_static = { workspace = true }
rayon = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
meteor = { path = "../meteor/" }

[lints.clippy]
all = "warn"
pedantic = "allow"
